# data-platform

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dokploy.yml  docker-compose.yml  makefile  pyproject.toml  requirements.txt  run_backfill.py
.github/workflows/: deploy.yml
.tmp_dagster_home_m4hv2_lp/history/: runs.db
.tmp_dagster_home_m4hv2_lp/schedules/: schedules.db
deploy/: Dockerfile  Dockerfile.authkit-webserver  dagster.yaml  workspace.yaml
ingestion/: __init__.py  common.py  db_utils.py  pipelines.py  utils.py
ingestion/frappe/: __init__.py  client.py  source.py
ingestion/google_sheets/: __init__.py  source.py
ingestion/haravan/: __init__.py  snapshot.py  source.py
ingestion/lark/: __init__.py  catalog.py  catalog.yml  source.py
ingestion/larksuite/: __init__.py  catalog.py  catalog.yml  source.py
ingestion/nocodb/: __init__.py  source.py
ingestion/openfacet/: __init__.py  source.py
ingestion/pancake/: __init__.py  _env_utils.py  messages_queue.py  source.py  tables_to_sync.yaml
metabase/: docker-compose.yml
orchestration/: definitions.py  tags.py
orchestration/assets/: __init__.py
orchestration/catalogs/: __init__.py  common.py
orchestration/jobs/: __init__.py  backfill.py  common.py  ingestion_jobs.py  transformation_jobs.py
orchestration/resources/: __init__.py  dbt.py  dlt.py  haravan_snapshot.py  pancake_queue.py
orchestration/schedules/: __init__.py  common.py  ingestion_schedules.py  transformation_schedules.py
transformation/: dbt_project.yml  profiles.yml
(+321 files in other folders)
