[project]
name = "data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.13.0",
    "dagster-dbt>=0.29.0",
    "dagster-dlt>=0.29.0",
    "dagster-webserver>=1.13.0",
    "dbt-core>=1.11.8",
    "dbt-postgres>=1.10.0",
    "postgres>=4.0",
    "python-dotenv>=1.2.2",
]

[tool.dagster]
module_name = "orchestration"
